Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="game-box">
   <div class="game-header">
     <img src="https://static.download.it/gen/android/subway-surfers-100x100.png" alt="Subway Surfers">
-    <h1>Subway Surfers v4.0.1 MOD</h1>
+    <h1>Subway Surfers</h1>
   </div>
 
   <p>Baixe agora Subway Surfers com dinheiro infinito e tudo liberado! Versão atualizada para 2025, 100% funcional e seguro.</p>
