Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <h1>Subway Surfers</h1>
   </div>
 
-  <p>Baixe agora Subway Surfers com dinheiro infinito e tudo liberado! Versão atualizada para 2025, 100% funcional e seguro.</p>
+  <p>BAIXE SUBWAY SURFERS AGORA!
+Tudo desbloqueado, dinheiro infinito e sem anúncios.
+Rápido, seguro e 100% funcional!</p>
 
   <div class="screenshots">
     <img src="https://play-lh.googleusercontent.com/RTZy9CY_unsiAUXzq3w31t7JrRGtno41N9yAbMzofiXXQj_XhopGwc0FCII2fI-p4A=w1052-h592-rw" alt="Screenshot 1">
