Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Rápido, seguro e 100% funcional!</p>
   </div>
 
   <div class="download">
-    <a href="https://www.mediafire.com/file/nonyj82vfaqdwja/Subway_Surfers_v._4.0.1_Dinheiro_Infinito_Tudo_Liberado_2025.apk/file" target="_blank">Baixar Jogo</a>
+    <a href="https://www.mediafire.com/file/nonyj82vfaqdwja/Subway_Surfers_v._4.0.1_Dinheiro_Infinito_Tudo_Liberado_2025.apk/file" target="_blank">Baixar Aqui !!</a>
   </div>
 </div>
 
