Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -57,3 +57,26 @@ Rápido, seguro e 100% funcional!</p>
 
 </body>
 </html>
+
+<!-- JOGO 2 -->
+<div class="game-box">
+  <div class="game-header">
+    <img src=https://img.utdstc.com/icon/225/579/225579ba8522de019fc44dddf4cfb56c5dd9eb01a29ea1a813db98b8ca3453cc:200>
+    <h1>Zombie Tsunami</h1>
+  </div>
+
+  <p>BAIXE ZOMBIE TSUNAMI!
+Tudo desbloqueado, moedas infinitas e sem anúncios.
+Rápido, seguro e 100% funcional!</p>
+
+  <div class="screenshots">
+    <img src=https://play-lh.googleusercontent.com/9xUnGdQgJI5DQj7VBuf9O14Lw_A2uaWswIUkB747F_-g9u5RJpzoOjSFLz-qqa_WLcYH=w1052-h592-rw alt="Screenshot 1">
+    <img src=https://play-lh.googleusercontent.com/T5-GfrRbKAsUGMiSoMAjTEsducnLbkRMwMlfVjFIg5Ev5Zcsk6DZxqf8vI7Z9hkXlQ=w1052-h592-rw alt="Screenshot 2">
+    <img src=https://play-lh.googleusercontent.com/y0pNjLcEpFjJXo2WZcAzGkz51I9fOn5H4wtVyv5SU0nyxIsYBoqe6MfeNi0xK1DRDJY=w1052-h592-rw alt="Screenshot 3">
+    <img src=https://play-lh.googleusercontent.com/sx38Onyn7IJ2-4wNliOtag0b-D54cXf6o1mITKy5mAKJ3_ai-GyO2127dcfS2eo0ZA=w1052-h592-rw alt="Screenshot 4">
+  </div>
+
+  <div class="download">
+    <a href="https://exemplo.com/templerun" target="_blank">Baixar Aqui !!</a>
+  </div>
+</div>
