Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Rápido, seguro e 100% funcional!</p>
   </div>
 
   <div class="download">
-    <a href=https://fir3.net/CzDkhbVLJf target="_blank">Baixar Aqui !!</a>
+    <a href=https://drive.google.com/file/d/1cC9vLr-tRQme1UmZcqrEVoVPGHRgMHTW/view?usp=drivesdk target="_blank">Baixar Aqui !!</a>
   </div>
 </div>
 
