Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
 <main class="game-grid">
   <div class="game-card">
     <img src="https://static.download.it/gen/android/subway-surfers-100x100.png" alt="Subway Surfers">
-    <h2>Subway Surfers</h2>
-    <p>Jogo clássico de corrida infinita com tudo desbloqueado e sem anúncios.</p>
+    <h2>SUBWAY SURFERS</h2>
+    <p>Corra como nunca antes!
+Com moedas e chaves infinitas, todos os personagens e pranchas liberados e zero anúncios, essa versão te dá liberdade total pra explorar qualquer cidade do mundo no seu ritmo. A adrenalina é sua — a limitação ficou no passado.</p>
     <a class="download-btn" href="https://drive.google.com/file/d/1cC9vLr-tRQme1UmZcqrEVoVPGHRgMHTW/view?usp=drivesdk" target="_blank">Baixar</a>
   </div>
 
   <div class="game-card">
     <img src="https://img.utdstc.com/icon/225/579/225579ba8522de019fc44dddf4cfb56c5dd9eb01a29ea1a813db98b8ca3453cc:200" alt="Zombie Tsunami">
-    <h2>Zombie Tsunami</h2>
-    <p>Conquiste a cidade com sua horda de zumbis. Tudo desbloqueado!</p>
+    <h2>ZOMBIE TSUNAMI</h2>
+    <p>Transforme o caos em diversão!
+Comece com recursos infinitos, desbloqueie todos os bônus insanos (dragão, OVNI, ninja e mais!) e jogue sem nenhuma interrupção. Seja o líder da maior horda de zumbis e cause uma tsunami de destruição com estilo!</p>
     <a class="download-btn" href="https://drive.google.com/file/d/14is_lU-0dJu0VvEzDmtj1WSJpVr_M5U2/view?usp=drivesdk" target="_blank">Baixar</a>
   </div>
 </main>
