Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <img src="https://static.download.it/gen/android/subway-surfers-100x100.png" alt="Subway Surfers">
     <h2>SUBWAY SURFERS</h2>
     <p>Corra como nunca antes!
-Com moedas e chaves infinitas, todos os personagens e pranchas liberados e zero anúncios, essa versão te dá liberdade total pra explorar qualquer cidade do mundo no seu ritmo. A adrenalina é sua — a limitação ficou no passado.</p>
+Com moedas e chaves infinitas, todos os personagens e pranchas liberados e zero anúncios, essa versão te dá liberdade total pra explorar qualquer cidade do mundo no seu ritmo. A adrenalina é sua a limitação ficou no passado!</p>
     <a class="download-btn" href="https://drive.google.com/file/d/1cC9vLr-tRQme1UmZcqrEVoVPGHRgMHTW/view?usp=drivesdk" target="_blank">Baixar</a>
   </div>
 
