Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Com moedas e chaves infinitas, todos os personagens e pranchas liberados e zero 
     <h2>ZOMBIE TSUNAMI</h2>
     <p>Transforme o caos em diversão!
 Comece com recursos infinitos, desbloqueie todos os bônus insanos (dragão, OVNI, ninja e mais!) e jogue sem nenhuma interrupção. Seja o líder da maior horda de zumbis e cause uma tsunami de destruição com estilo!</p>
-    <a class="download-btn" href="https://drive.google.com/file/d/14is_lU-0dJu0VvEzDmtj1WSJpVr_M5U2/view?usp=drivesdk" target="_blank">Baixar</a>
+    <a class="download-btn" href=https://drive.google.com/file/d/1_gO1Ai_vwwYAPdtddnv3-RhaeCZjXRyB/view?usp=drivesdk target="_blank">Baixar</a>
   </div>
 </main>
 
