--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -12,29 +11,46 @@
 <header>
   <h1>PLAY CRACKZ</h1>
   <div class="search-box">
-    <input type="text" id="searchInput" placeholder="Buscar jogos..." onkeyup="filterGames()">
+    <input type="text" id="searchInput" placeholder="Buscar jogos ou apps..." onkeyup="filterGames()">
     <button onclick="filterGames()">
       <img src="https://cdn-icons-png.flaticon.com/512/54/54481.png" alt="Buscar">
     </button>
   </div>
 </header>
 
-<main class="game-grid">
-  <div class="game-card">
-    <img src="https://static.download.it/gen/android/subway-surfers-100x100.png" alt="Subway Surfers">
-    <h2>SUBWAY SURFERS</h2>
-    <p>Corra como nunca antes!
-Com moedas e chaves infinitas, todos os personagens e pranchas liberados e zero anúncios, essa versão te dá liberdade total pra explorar qualquer cidade do mundo no seu ritmo. A adrenalina é sua a limitação ficou no passado!</p>
-    <a class="download-btn" href="https://drive.google.com/file/d/1cC9vLr-tRQme1UmZcqrEVoVPGHRgMHTW/view?usp=drivesdk" target="_blank">Baixar</a>
-  </div>
+<main>
+  <section>
+    <h2 class="category-title">Jogos</h2>
+    <div class="game-grid" id="games-category">
+      <div class="game-card" data-category="jogos">
+        <img src="https://static.download.it/gen/android/subway-surfers-100x100.png" alt="Subway Surfers">
+        <h2>SUBWAY SURFERS</h2>
+        <p>Corra como nunca antes!
+        Com moedas e chaves infinitas, todos os personagens e pranchas liberados e zero anúncios, essa versão te dá liberdade total pra explorar qualquer cidade do mundo no seu ritmo. A adrenalina é sua a limitação ficou no passado!</p>
+        <a class="download-btn" href="https://drive.google.com/file/d/1cC9vLr-tRQme1UmZcqrEVoVPGHRgMHTW/view?usp=drivesdk" target="_blank">Baixar</a>
+      </div>
 
-  <div class="game-card">
-    <img src="https://img.utdstc.com/icon/225/579/225579ba8522de019fc44dddf4cfb56c5dd9eb01a29ea1a813db98b8ca3453cc:200" alt="Zombie Tsunami">
-    <h2>ZOMBIE TSUNAMI</h2>
-    <p>Transforme o caos em diversão!
-Comece com recursos infinitos, desbloqueie todos os bônus insanos (dragão, OVNI, ninja e mais!) e jogue sem nenhuma interrupção. Seja o líder da maior horda de zumbis e cause uma tsunami de destruição com estilo!</p>
-    <a class="download-btn" href=https://drive.google.com/file/d/1_gO1Ai_vwwYAPdtddnv3-RhaeCZjXRyB/view?usp=drivesdk target="_blank">Baixar</a>
-  </div>
+      <div class="game-card" data-category="jogos">
+        <img src="https://img.utdstc.com/icon/225/579/225579ba8522de019fc44dddf4cfb56c5dd9eb01a29ea1a813db98b8ca3453cc:200" alt="Zombie Tsunami">
+        <h2>ZOMBIE TSUNAMI</h2>
+        <p>Transforme o caos em diversão!
+        Comece com recursos infinitos, desbloqueie todos os bônus insanos (dragão, OVNI, ninja e mais!) e jogue sem nenhuma interrupção. Seja o líder da maior horda de zumbis e cause uma tsunami de destruição com estilo!</p>
+        <a class="download-btn" href="https://drive.google.com/file/d/1_gO1Ai_vwwYAPdtddnv3-RhaeCZjXRyB/view?usp=drivesdk" target="_blank">Baixar</a>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <h2 class="category-title">Apps</h2>
+    <div class="game-grid" id="apps-category">
+      <div class="game-card" data-category="apps">
+        <img src="https://cdn-icons-png.flaticon.com/512/888/888879.png" alt="App Exemplo">
+        <h2>APP EXEMPLO</h2>
+        <p>Tenha controle total com todos os recursos PRO desbloqueados, sem anúncios e com uma experiência fluida. Ideal para produtividade, edição e muito mais.</p>
+        <a class="download-btn" href="https://drive.google.com/file/d/EXEMPLO_ID/view?usp=drivesdk" target="_blank">Baixar</a>
+      </div>
+    </div>
+  </section>
 </main>
 
 <script>
