--- a/index.html
+++ b/index.html
@@ -83,3 +83,10 @@ function showCategory(category) {
 
 </body>
 </html>
+
+<div class="game-card" data-category="jogos">
+        <img src=https://play-lh.googleusercontent.com/orKIEE8HVueEHzaq1P9GEI-MbTJh5jkcRZnWUrHJoKrzMPzrSzYPY625sweqsWOSZHs=w480-h960-rw>
+        <h2>PLANTS VS. ZOMBIES 2</h2>
+        <p>Lute como nunca antes! Com gemas e moedas infinitas, todas as plantas desbloqueadas, upgrades no máximo e zero anúncios para atrapalhar!</p>
+        <a class="download-btn" href="https://drive.google.com/file/d/1_gO1Ai_vwwYAPdtddnv3-RhaeCZjXRyB/view?usp=drivesdk" target="_blank">Baixar</a>
+      </div>
