--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="https://static.download.it/gen/android/subway-surfers-100x100.png" alt="Subway Surfers">
         <h2>SUBWAY SURFERS</h2>
         <p>Corra como nunca antes! Com moedas e chaves infinitas, todos os personagens e pranchas liberados e zero anúncios.</p>
-        <a class="download-btn" href="https://drive.google.com/file/d/1cC9vLr-tRQme1UmZcqrEVoVPGHRgMHTW/view?usp=drivesdk" target="_blank">Baixar</a>
+        <a class="download-btn" href=https://drive.google.com/file/d/1R2bJnPMkHv-JnIzJmUJKxP9ZS8zgrRw0/view?usp=drivesdk target="_blank">Baixar</a>
       </div>
       <div class="game-card" data-category="jogos">
         <img src="https://img.utdstc.com/icon/225/579/225579ba8522de019fc44dddf4cfb56c5dd9eb01a29ea1a813db98b8ca3453cc:200" alt="Zombie Tsunami">
