--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <img src=https://play-lh.googleusercontent.com/orKIEE8HVueEHzaq1P9GEI-MbTJh5jkcRZnWUrHJoKrzMPzrSzYPY625sweqsWOSZHs=w480-h960-rw>
         <h2>PLANTS VS ZOMBIES 2</h2>
         <p>Lute como nunca antes! Com gemas e moedas infinitas, todas as plantas desbloqueadas, upgrades no máximo e zero anúncios para atrapalhar!</p>
-        <a class="download-btn" href="https://drive.google.com/file/d/1_gO1Ai_vwwYAPdtddnv3-RhaeCZjXRyB/view?usp=drivesdk" target="_blank">Baixar</a>
+        <a class="download-btn" href=https://drive.google.com/file/d/1R2bJnPMkHv-JnIzJmUJKxP9ZS8zgrRw0/view?pli=1 target="_blank">Baixar</a>
       </div>
 
 </div>
