--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <main>
   <section id="home-section">
-    <h2 class="category-title">Bem-vindo ao PLAY CRACKZ!</h2>
+    <h2 class="category-title">!</h2>
     <p>Explore nossas abas de Jogos e Apps para baixar seus favoritos.</p>
   </section>
 
