Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <header>
-  <h1 class="site-title">PLAY CRACKZ</h1>
+  <h1 class="site-title">PLAY<br>CRACKZ</h1>
   <nav class="menu">
     <a href="#games-category">Jogos</a>
     <a href="#apps-category">Apps</a>
