Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h2 class="category-title">Jogos</h2>
     <div class="game-grid">
       <div class="game-card" data-category="jogos">
-        <img src="https://static.download.it/gen/android/subway-surfers-100x100.png" alt="Subway Surfers">
+        <img src=https://play-lh.googleusercontent.com/7XhuH3jCxk8ledQ77YBsqthLVgDgAtiVP86b92_6Ljk6JJ7BUwDxidVscphfuAv05Ss=w480-h960-rw alt="Subway Surfers">
         <h2>SUBWAY SURFERS</h2>
         <p>Corra como nunca antes! Com moedas e chaves infinitas, todos os personagens e pranchas liberados e zero anúncios.</p>
         <a class="download-btn" href="https://drive.google.com/file/d/1cC9vLr-tRQme1UmZcqrEVoVPGHRgMHTW/view?usp=drivesdk" target="_blank">Baixar</a>
