Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
         <a class="download-btn" href="https://drive.google.com/file/d/1cC9vLr-tRQme1UmZcqrEVoVPGHRgMHTW/view?usp=drivesdk" target="_blank">Baixar</a>
       </div>
       <div class="game-card" data-category="jogos">
-        <img src=https://play-lh.googleusercontent.com/y2v9w4KjUe4djmd3yYgj2_XrDIt_D9JO2c2NkYdxtYyE6cGl21JgU4aMqTEcoQzQorLD=w480-h960-rw alt="Zombie Tsunami">
-        <h2>ZOMBIE TSUNAMI</h2>
-        <p>Recursos infinitos, todos os bônus insanos desbloqueados e nenhuma interrupção. Conduza sua horda de zumbis!</p>
+        <img src=https://play-lh.googleusercontent.com/orKIEE8HVueEHzaq1P9GEI-MbTJh5jkcRZnWUrHJoKrzMPzrSzYPY625sweqsWOSZHs=w480-h960-rw>
+        <h2>PLANTS VS ZOMBIES™ 2
+
+</h2>
+        <p>Prepare-se para ação sem limites! Com recursos infinitos, plantas poderosas e nenhuma interrupção, a diversão é garantida do começo ao fim!
+
+</p>
         <a class="download-btn" href="https://drive.google.com/file/d/1_gO1Ai_vwwYAPdtddnv3-RhaeCZjXRyB/view?usp=drivesdk" target="_blank">Baixar</a>
       </div>
     </div>
