Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p>Prepare-se para ação sem limites! Com recursos infinitos, plantas poderosas e nenhuma interrupção, a diversão é garantida do começo ao fim!
 
 </p>
-        <a class="download-btn" href="https://drive.google.com/file/d/1_gO1Ai_vwwYAPdtddnv3-RhaeCZjXRyB/view?usp=drivesdk" target="_blank">Baixar</a>
+        <a class="download-btn" href=https://drive.google.com/file/d/1R2bJnPMkHv-JnIzJmUJKxP9ZS8zgrRw0/view?usp=drivesdk>Baixar</a>
       </div>
     </div>
   </section>
