Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img src=https://play-lh.googleusercontent.com/7XhuH3jCxk8ledQ77YBsqthLVgDgAtiVP86b92_6Ljk6JJ7BUwDxidVscphfuAv05Ss=w480-h960-rw alt="Subway Surfers">
         <h2>SUBWAY SURFERS</h2>
         <p>Corra como nunca antes! Com moedas e chaves infinitas, todos os personagens e pranchas liberados e zero anúncios.</p>
-        <a class="download-btn" href="https://drive.google.com/file/d/1cC9vLr-tRQme1UmZcqrEVoVPGHRgMHTW/view?usp=drivesdk" target="_blank">Baixar</a>
+        <a class="download-btn" href=https://drive.google.com/uc?export=download&id=1cC9vLr-tRQme1UmZcqrEVoVPGHRgMHTW target="_blank">Baixar</a>
       </div>
       <div class="game-card" data-category="jogos">
         <img src=https://play-lh.googleusercontent.com/orKIEE8HVueEHzaq1P9GEI-MbTJh5jkcRZnWUrHJoKrzMPzrSzYPY625sweqsWOSZHs=w480-h960-rw>
