--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PLAY CRACKZ - Baixe Jogos e Apps Modificados</title>
-  <meta name="description" content="Baixe jogos e aplicativos modificados diretamente no seu celular com links diretos.">
-  <meta name="keywords" content="jogos, apps, apk, modificados, crack, download">
-  <meta name="author" content="PLAY CRACKZ">
+  <title>PLAY CRACKZ</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
 </head>
@@ -64,13 +61,9 @@
       </div>
     </div>
   </section>
-
-<button id="backToTop" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">&#8679;</button>
 </main>
 
-<footer>
-  <p>© 2025 PLAY CRACKZ — Todos os direitos reservados.</p>
-</footer>
+
 
 <script>
 function filterGames() {
@@ -84,15 +77,6 @@ function filterGames() {
     card.style.display = show ? 'block' : 'none';
   });
 }
-
-window.onscroll = function () {
-  const btn = document.getElementById("backToTop");
-  if (document.documentElement.scrollTop > 300) {
-    btn.style.display = "block";
-  } else {
-    btn.style.display = "none";
-  }
-};
 </script>
 
 
@@ -114,23 +98,18 @@ document.querySelector('a[href="#apps-category"]').addEventListener('click', fun
 });
 
 showSection('games-category'); // Exibe jogos por padrão
-
-window.onscroll = function () {
-  const btn = document.getElementById("backToTop");
-  if (document.documentElement.scrollTop > 300) {
-    btn.style.display = "block";
-  } else {
-    btn.style.display = "none";
-  }
-};
 </script>
 
-<footer class="footer">
-  <p>&copy; 2025 PLAY CRACKZ. Todos os direitos reservados.</p>
-  <nav>
-    <a href="#">Política de Privacidade</a> | <a href="#">Contato</a>
-  </nav>
+<footer style="background:#111;color:white;padding:30px;text-align:center;">
+  <h3>Contato</h3>
+  <form action="https://formsubmit.co/PlayCrackzz@gmail.com" method="POST" style="max-width:400px;margin:auto;">
+    <input type="text" name="name" placeholder="Seu nome (opcional)" style="width:100%;padding:10px;margin:5px 0;"><br>
+    <textarea name="message" placeholder="Sua mensagem" required style="width:100%;padding:10px;margin:5px 0;height:100px;"></textarea><br>
+    <button type="submit" style="background:#00b894;color:white;padding:10px 20px;border:none;border-radius:5px;cursor:pointer;">Enviar</button>
+  </form>
+  <p style="margin-top:15px;">&copy; 2025 PLAY CRACKZ - Todos os direitos reservados.</p>
 </footer>
+
 </body>
 
 </html>
