--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PLAY CRACKZ</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
 </head>
@@ -63,61 +64,29 @@
   </section>
 </main>
 
-<footer>
-  <p>© 2025 PLAY CRACKZ — Todos os direitos reservados.</p>
+
+<footer class="site-footer">
+  <div class="container">
+    <p><a href="#">Política de Privacidade</a> | <a href="#">Contato</a></p>
+  </div>
 </footer>
 
-<script>
-function filterGames() {
-  const input = document.getElementById('searchInput').value.toLowerCase();
-  const cards = document.querySelectorAll('.game-card');
 
-  cards.forEach(card => {
-    const title = card.querySelector('h2').textContent.toLowerCase();
-    const description = card.querySelector('p').textContent.toLowerCase();
-    const show = title.includes(input) || description.includes(input);
-    card.style.display = show ? 'block' : 'none';
+
+<script>
+  const topoBtn = document.querySelector('.btn-topo');
+  window.addEventListener('scroll', () => {
+    if (window.scrollY > 300) {
+      topoBtn.style.opacity = '1';
+      topoBtn.style.pointerEvents = 'auto';
+    } else {
+      topoBtn.style.opacity = '0';
+      topoBtn.style.pointerEvents = 'none';
+    }
   });
-}
 </script>
-
-
-<script>
-function showSection(id) {
-  document.getElementById('games-category').style.display = 'none';
-  document.getElementById('apps-category').style.display = 'none';
-  document.getElementById(id).style.display = 'block';
-}
-
-document.querySelector('a[href="#games-category"]').addEventListener('click', function(e) {
-  e.preventDefault();
-  showSection('games-category');
-});
-
-document.querySelector('a[href="#apps-category"]').addEventListener('click', function(e) {
-  e.preventDefault();
-  showSection('apps-category');
-});
-
-showSection('games-category'); // Exibe jogos por padrão
-</script>
-
-<footer class="footer">
-  <p>© 2025 PLAY CRACKZ. Todos os direitos reservados.</p>
-  <p>
-    <a href="privacidade.html">Política de Privacidade</a> |
-    <a href="contato.html">Contato</a>
-  </p>
-</footer>
-
-<button onclick="scrollToTop()" class="btn-topo" title="Voltar ao topo">↑</button>
-
-<script>
-  function scrollToTop() {
-    window.scrollTo({ top: 0, behavior: 'smooth' });
-  }
-</script>
-
 </body>
+
+
 
 </html>
