--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PLAY CRACKZ</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -65,11 +65,14 @@
 </main>
 
 
+
 <footer class="site-footer">
   <div class="container">
-    <p><a href="#">Política de Privacidade</a> | <a href="#">Contato</a></p>
+    <p>© 2025 PLAY CRACKZ. Todos os direitos reservados.</p>
+    <p><a href="politica.html">Política de Privacidade</a> | <a href="#">Contato</a></p>
   </div>
 </footer>
+
 
 
 
