--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PLAY CRACKZ</title>
@@ -88,6 +89,25 @@
     }
   });
 </script>
+
+<!-- Botão de voltar ao topo -->
+<button onclick="topFunction()" id="topBtn" title="Voltar ao topo">&#8679;</button>
+<script>
+  var mybutton = document.getElementById("topBtn");
+  window.onscroll = function() {scrollFunction();};
+  function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+      mybutton.style.display = "block";
+    } else {
+      mybutton.style.display = "none";
+    }
+  }
+  function topFunction() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+  }
+</script>
+
 </body>
 
 
