--- a/politica.html
+++ b/politica.html
@@ -3,27 +3,65 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Política de Privacidade</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Política de Privacidade - PLAY CRACKZ</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: Arial, sans-serif;
+            background-color: #0d1117;
+            color: #c9d1d9;
+            margin: 0;
             padding: 20px;
             line-height: 1.6;
-            max-width: 800px;
-            margin: auto;
-            color: #222;
         }
-        h1 {
-            color: #111;
+        .container {
+            max-width: 900px;
+            margin: auto;
+            padding: 20px;
+            background-color: #161b22;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.5);
+        }
+        h1, h2 {
+            color: #58a6ff;
+        }
+        a {
+            color: #58a6ff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <h1>Política de Privacidade</h1>
-    <p>O site PLAY CRACKZ respeita sua privacidade. Não coletamos dados pessoais dos visitantes, e os arquivos disponibilizados são hospedados de forma direta, sem necessidade de cadastro ou login.</p>
-    <p>Todos os arquivos são verificados antes da publicação. Recomendamos que você utilize um antivírus confiável antes de instalar qualquer conteúdo em seu dispositivo.</p>
-    <p>Nosso site pode conter links externos. Não nos responsabilizamos pelo conteúdo ou política de privacidade desses sites terceiros.</p>
-    <p>Em caso de dúvidas, entre em contato conosco pela página principal.</p>
+    <div class="container">
+        <h1>Política de Privacidade</h1>
+        <p><strong>Última atualização:</strong> 25 de maio de 2025</p>
+
+        <p>A sua privacidade é uma prioridade para nós. Esta Política de Privacidade descreve como coletamos, usamos e protegemos suas informações ao acessar o site <strong>PLAY CRACKZ</strong>.</p>
+
+        <h2>1. Coleta de Informações</h2>
+        <p>Não coletamos informações pessoais identificáveis como nome, e-mail ou telefone. Coletamos apenas dados de navegação, como tipo de navegador e páginas acessadas, para fins estatísticos.</p>
+
+        <h2>2. Uso de Cookies</h2>
+        <p>Usamos cookies para melhorar sua experiência de navegação. Você pode desativá-los nas configurações do seu navegador.</p>
+
+        <h2>3. Downloads e Segurança</h2>
+        <p>Todos os APKs disponibilizados são verificados antes da publicação. Recomendamos o uso de antivírus. O uso dos arquivos é de responsabilidade do usuário.</p>
+
+        <h2>4. Links para Terceiros</h2>
+        <p>Nosso site pode conter links externos. Não nos responsabilizamos pelo conteúdo ou política de privacidade desses sites.</p>
+
+        <h2>5. Seus Direitos</h2>
+        <p>Você tem direito de acessar, corrigir ou excluir seus dados pessoais, conforme a Lei Geral de Proteção de Dados (LGPD). Entre em contato através da nossa <a href="index.html">página principal</a>.</p>
+
+        <h2>6. Alterações</h2>
+        <p>Esta política pode ser atualizada a qualquer momento. Recomendamos revisá-la periodicamente.</p>
+
+        <h2>7. Contato</h2>
+        <p>Para dúvidas, fale conosco pela <a href="index.html">página inicial</a>.</p>
+    </div>
 </body>
 </html>
