--- a/politica.html
+++ b/politica.html
@@ -3,27 +3,69 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Política de Privacidade</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <title>Política de Privacidade - PLAY CRACKZ</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            padding: 20px;
-            line-height: 1.6;
-            max-width: 800px;
+            background-color: #111222;
+            color: #eee;
+            margin: 0;
+            padding: 40px 20px;
+            max-width: 900px;
             margin: auto;
-            color: #222;
+        }
+        .logo {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .logo img {
+            max-width: 300px;
         }
         h1 {
-            color: #111;
+            color: #00e676;
+            text-align: center;
+            font-size: 2.2rem;
+        }
+        h2 {
+            color: #00c853;
+            margin-top: 30px;
+        }
+        p {
+            margin: 10px 0;
+            text-align: justify;
+        }
+        a {
+            color: #64ffda;
         }
     </style>
 </head>
 <body>
+    <div class="logo">
+        <img src="https://kauatv.github.io/PLAY-CRACKZ/logo.png" alt="Logo PLAY CRACKZ">
+    </div>
     <h1>Política de Privacidade</h1>
-    <p>O site PLAY CRACKZ respeita sua privacidade. Não coletamos dados pessoais dos visitantes, e os arquivos disponibilizados são hospedados de forma direta, sem necessidade de cadastro ou login.</p>
-    <p>Todos os arquivos são verificados antes da publicação. Recomendamos que você utilize um antivírus confiável antes de instalar qualquer conteúdo em seu dispositivo.</p>
-    <p>Nosso site pode conter links externos. Não nos responsabilizamos pelo conteúdo ou política de privacidade desses sites terceiros.</p>
-    <p>Em caso de dúvidas, entre em contato conosco pela página principal.</p>
+
+    <p>Bem-vindo ao <strong>PLAY CRACKZ</strong>. A sua privacidade é muito importante para nós. Esta política tem como objetivo esclarecer como lidamos com os dados e o uso do nosso site.</p>
+
+    <h2>Coleta de Informações</h2>
+    <p>Não coletamos dados pessoais dos visitantes. Você pode navegar, baixar e utilizar nossos conteúdos sem fornecer nenhuma informação pessoal.</p>
+
+    <h2>Arquivos Disponibilizados</h2>
+    <p>Todos os arquivos APK são hospedados diretamente, sem necessidade de login ou registro. Verificamos os arquivos antes da publicação, mas recomendamos que o usuário utilize um antivírus confiável por segurança extra.</p>
+
+    <h2>Links de Terceiros</h2>
+    <p>Nosso site pode conter links para outras plataformas. Não nos responsabilizamos pelas práticas de privacidade ou conteúdo desses sites externos.</p>
+
+    <h2>Publicidade e Cookies</h2>
+    <p>Atualmente, o site não utiliza cookies nem exibe anúncios. Se isso mudar, esta política será atualizada para refletir as novas práticas.</p>
+
+    <h2>Segurança</h2>
+    <p>Tomamos medidas para manter o site seguro e livre de ameaças, mas o uso é por sua conta e risco. Ao baixar conteúdo, certifique-se de que seu dispositivo esteja protegido.</p>
+
+    <h2>Contato</h2>
+    <p>Para dúvidas, sugestões ou pedidos relacionados à privacidade, entre em contato pela página principal ou através de nossos canais oficiais listados lá.</p>
+
+    <p style="margin-top: 40px; text-align: center;">Última atualização: 25 de maio de 2025</p>
 </body>
 </html>
