--- a/politica.html
+++ b/politica.html
@@ -42,7 +42,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="https://kauatv.github.io/PLAY-CRACKZ/logo.png" alt="Logo PLAY CRACKZ">
+        <img src="https://i.postimg.cc/WFYv0KWR/logo.png" alt="Logo PLAY CRACKZ">
     </div>
     <h1>Política de Privacidade</h1>
 
