--- a/politica.html
+++ b/politica.html
@@ -4,36 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Política de Privacidade - PLAY CRACKZ</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;800&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Inter', sans-serif;
-            background-color: #111222;
+            font-family: 'Orbitron', sans-serif;
+            background-color: #0d0d0d;
             color: #eee;
             margin: 0;
             padding: 40px 20px;
             max-width: 900px;
             margin: auto;
         }
-        .logo {
+        .logo-text {
             text-align: center;
-            margin-bottom: 30px;
-        }
-        .logo img {
-            max-width: 300px;
+            margin-bottom: 40px;
+            font-size: 4rem;
+            font-weight: 800;
+            color: #00ff88;
+            text-shadow: 0 0 15px #00e676, 0 0 25px #00c853;
+            letter-spacing: 3px;
         }
         h1 {
             color: #00e676;
             text-align: center;
-            font-size: 2.2rem;
+            font-size: 2rem;
         }
         h2 {
             color: #00c853;
             margin-top: 30px;
+            font-size: 1.4rem;
         }
         p {
             margin: 10px 0;
             text-align: justify;
+            font-family: 'Inter', sans-serif;
+            font-size: 1rem;
         }
         a {
             color: #64ffda;
@@ -41,8 +46,8 @@
     </style>
 </head>
 <body>
-    <div class="logo">
-        <img src="https://i.postimg.cc/WFYv0KWR/logo.png" alt="Logo PLAY CRACKZ">
+    <div class="logo-text">
+        PLAY<br>CRACKZ
     </div>
     <h1>Política de Privacidade</h1>
 
