--- a/contato.html
+++ b/contato.html
@@ -1,61 +1,81 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <title>Contato - PLAY CRACKZ</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;800&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      background: #111;
+      background: #0d0d0d;
       color: white;
-      font-family: Arial, sans-serif;
+      font-family: 'Inter', sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
+      padding: 20px;
     }
     .contato {
-      background: #000;
+      background: #111222;
       padding: 30px;
       border-radius: 16px;
-      box-shadow: 0 0 20px #0005;
-      width: 90%;
-      max-width: 400px;
+      box-shadow: 0 0 20px #00e67655;
+      width: 100%;
+      max-width: 420px;
+    }
+    .logo-nome {
+      font-family: 'Orbitron', sans-serif;
+      text-align: center;
+      font-size: 2.5rem;
+      font-weight: 800;
+      color: #00ff88;
+      text-shadow: 0 0 12px #00c853;
+      margin-bottom: 10px;
+      letter-spacing: 2px;
+    }
+    h2 {
+      text-align: center;
+      color: #00e676;
+      margin-bottom: 20px;
     }
     input, textarea {
       width: 100%;
-      padding: 10px;
-      margin-top: 10px;
-      background: #111;
+      padding: 12px;
+      margin-top: 12px;
+      background: #1a1a1a;
       border: 1px solid #333;
       color: white;
       font-size: 16px;
       border-radius: 8px;
     }
     button {
-      margin-top: 15px;
+      margin-top: 20px;
       width: 100%;
-      background: #00c2a0;
+      background: #00c853;
       color: white;
-      padding: 12px;
+      padding: 14px;
       font-size: 18px;
+      font-weight: bold;
       border: none;
       border-radius: 10px;
       cursor: pointer;
+      transition: background 0.3s ease;
     }
-    h2 {
-      text-align: center;
-      margin-bottom: 15px;
+    button:hover {
+      background: #00e676;
     }
   </style>
 </head>
 <body>
   <form class="contato" action="https://formsubmit.co/PlayCrackzz@gmail.com" method="POST">
-    <h2>Contato</h2>
+    <div class="logo-nome">PLAY CRACKZ</div>
+    <h2>Entre em Contato</h2>
     <input type="text" name="name" placeholder="Seu nome (opcional)">
-    <textarea name="message" rows="5" placeholder="Sua mensagem" required></textarea>
+    <textarea name="message" rows="5" placeholder="Escreva sua mensagem aqui..." required></textarea>
     <input type="hidden" name="_captcha" value="false">
-    <button type="submit">Enviar</button>
+    <button type="submit">Enviar Mensagem</button>
   </form>
 </body>
 </html>
