--- a/contato.html
+++ b/contato.html
@@ -70,13 +70,12 @@
 </head>
 <body>
   <form class="contato" action="https://formsubmit.co/PlayCrackzz@gmail.com" method="POST">
-    <input type="hidden" name="_next" value="https://kauatv.github.io/PLAY-CRACKZ/">
+    <input type="hidden" name="_next" value="https://kauatv.github.io/PLAY-CRACKZ/agradecimento.html">
+    <input type="hidden" name="_captcha" value="false">
     <div class="logo-nome">PLAY CRACKZ</div>
     <h2>Entre em Contato</h2>
-    <input type="text" name="name" placeholder="Seu nome (opcional)">
-    <input type="email" name="email" placeholder="Seu e-mail (opcional)">
+    <input type="email" name="email" placeholder="Seu e-mail" required>
     <textarea name="message" rows="5" placeholder="Escreva sua mensagem aqui..." required></textarea>
-    <input type="hidden" name="_captcha" value="false">
     <button type="submit">Enviar Mensagem</button>
   </form>
 </body>
