Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
 
 <footer style="background-color:#131124; padding: 20px; text-align: center; color: white; border-radius: 20px;">
   <p>© 2025 PLAY CRACKZ. Todos os direitos reservados.</p>
-  <p><a href="politica.html" style="color: blue;">Política de Privacidade</a> | <a href="contato.html" style="color: blue;">Contato</a></p>
-  <button onclick="window.scrollTo({ top: 0, behavior: 'smooth' });" style="margin-top: 10px; padding: 10px 20px; border: none; border-radius: 10px; background-color: #282644; color: white; cursor: pointer;">Voltar ao Topo</button>
+  <p><a href="politica.html" style="color: blue;">Política de Privacidade</a> | <a href="contato.html" style="color: blue;">Contato</a>
+
+  </p>
+  
 </footer>
 
 
