--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <footer style="background-color:#131124; padding: 20px; text-align: center; color: white; border-radius: 20px;">
   <p>© 2025 PLAY CRACKZ. Todos os direitos reservados.</p>
-  <p><a href="politica.html" style="color: #00CFFF;">Política de Privacidade</a> | <a href="contato.html" style="color: #00CFFF;">Contato</a>
+  <p><a href="politica.html" style="color: blue;">Política de Privacidade</a> | <a href="contato.html" style="color: blue;">Contato</a>
 
   </p>
   
