Atualizar o contato.html

--- a/contato.html
+++ b/contato.html
@@ -72,7 +72,7 @@
   <form class="contato" action="https://formsubmit.co/PlayCrackzz@gmail.com" method="POST">
     <input type="hidden" name="_next" value="https://kauatv.github.io/PLAY-CRACKZ/agradecimento.html">
     <input type="hidden" name="_captcha" value="false">
-    <div class="logo-nome">PLAY CRACKZ</div>
+    <div class="logo-nome">PLAY<br>CRACKZ</div>
     <h2>Entre em Contato</h2>
     <input type="email" name="email" placeholder="Seu e-mail" required>
     <textarea name="message" rows="5" placeholder="Escreva sua mensagem aqui..." required></textarea>
